Fix vertical alignment of buttons

--- a/styles/home.css
+++ b/styles/home.css
@@ -169,6 +169,7 @@
     color: var(--bs-body-color);
     text-decoration: none;
     text-align: center;
+    align-content: center;
     border-radius: 10px;
     outline: 0.2vw solid #9b0e2d;
     padding: 1vw;
@@ -188,6 +189,7 @@
     font-size: min(1.9vw, 1.9em);
     text-decoration: none;
     text-align: center;
+    align-content: center;
     border-radius: 10px;
     outline: 0.2vw solid #9656ce;
     padding: 1vw;
